Add fonts and create pages routing

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,8 +1,14 @@
+@font-face {
+  font-family: 'GothamRounded Medium';
+  src: url('./fonts/GothamRounded-Medium.otf') format('opentype'),
+    url('./fonts/GothamRoundedMedium_21022.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'GothamRounded Medium', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
