--- a/web/src/index.css
+++ b/web/src/index.css
@@ -66,7 +66,9 @@
 
 body,
 div,
-button {
+button,
+input,
+form {
   margin: 0;
   font-family: 'GothamRounded', sans-serif;
   -webkit-font-smoothing: antialiased;
