style name & add desc

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -5,6 +5,7 @@
   --green: #7cd885;
   --red: #db7874;
   --light-grey: #c4c4c4;
+  --dark-grey: #868686;
 }
 
 @font-face {
@@ -71,6 +72,7 @@ body,
 div,
 button,
 input,
+textarea,
 form {
   margin: 0;
   color: var(--dark-blue);
