--- a/web/src/index.css
+++ b/web/src/index.css
@@ -4,6 +4,7 @@
   --dark-beige: #dcd9cf;
   --green: #7cd885;
   --red: #db7874;
+  --pale-grey: #efefef;
   --light-grey: #c4c4c4;
   --dark-grey: #868686;
 }
